<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Satoki Mizoguchi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Nature Remo API Sample</string>
    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>

    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_10">10</string>
    <string name="button_11">11</string>
    <string name="button_12">12</string>

    <string name="text_ch">CH</string>
    <string name="button_ch_up">∧</string>
    <string name="button_ch_down">∨</string>

    <string name="text_vol">VOL</string>
    <string name="button_vol_up">+</string>
    <string name="button_vol_down">-</string>

    <string name="success">success</string>
    <string name="failure">failure</string>
</resources>
