<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Satoki Mizoguchi
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_1" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_2" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_3" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_4" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_5" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_6" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_7" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_8" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_9" />

    <Button
        android:id="@+id/button_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_10" />

    <Button
        android:id="@+id/button_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_11" />

    <Button
        android:id="@+id/button_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_12" />

    <Button
        android:id="@+id/button_ch_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_ch_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_ch" />

    <Button
        android:id="@+id/button_ch_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_ch_down" />

    <Button
        android:id="@+id/button_vol_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnWeight="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_vol_up" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_vol" />

    <Button
        android:id="@+id/button_vol_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_vol_down" />

</GridLayout>